# fer-streamlit-app

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  merger2.0.py  project_code_dump.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  api.py  ui.py
config/: config.yaml
docs/: architecture.md  ethics.md
legacy/: video_inference.py  webcam_opencv.py
scripts/: benchmark.py  download_weights.py
src/emotion_ai/: __init__.py  config.py  logging_config.py  predictor.py  utils.py
src/emotion_ai/networks/: DDAM.py  MixedFeatureNet.py  __init__.py
src/emotion_ai_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_config.py  test_predictor.py
