[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emotion-ai-system"
version = "1.0.0"
description = "Production-Ready Real-Time Emotion Intelligence System (DDAMFN + FastAPI + Streamlit)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Diyora Bobokulova"}]

dependencies = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "numpy>=1.23",
  "Pillow>=10.0",
  "opencv-python-headless>=4.8",
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "streamlit>=1.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.26",
  "huggingface_hub>=0.20",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
